// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User should handle USER_LOGIN_SUCCESS 1`] = `
Object {
  "isAuthenticated": true,
}
`;

exports[`User should handle USER_LOGOUT_SUCCESS 1`] = `
Object {
  "isAuthenticated": false,
}
`;

exports[`User should return the initial state 1`] = `
Object {
  "isAuthenticated": false,
}
`;
